fix: background of scavenger hunt username on mobile

--- a/components/scavenger-hunt/component.module.css
+++ b/components/scavenger-hunt/component.module.css
@@ -49,6 +49,10 @@
   width: 100vw;
 }
 
+.background1WithoutFooter {
+  top: -19%;
+}
+
 .background2 {
   bottom: -9%;
   opacity: 38%;
